# concavity-aware-fields

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindLIBIGL.cmake
docs/: Doxyfile.in  conf.py  index.rst
src/conc_aware/: conc_aware.cpp
src/include/: basic_mesh_functions.cpp  basic_mesh_functions.h  color_ext.h  cpc.cpp  cpc.hpp  create_laplacian.cpp  create_laplacian.h  custom_isoline.cpp  custom_isoline.h  get_separate_lines.cpp  merge.cpp  merge2.cpp  mesh_utils.cpp  mesh_utils.hpp  meshseg_helpers.hpp  sdf.cpp  sdf.hpp  split_mesh.cpp  split_mesh.h  submesh.cpp  submesh.hpp
